Java 8 features interview questions.